BoltのPCページ作成

--- a/index.html
+++ b/index.html
@@ -8,8 +8,138 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/lib/all.css">
     <link rel="stylesheet" href="css/style.css">
+    <title>Bolt - Free Bootstrap 3 Theme</title>
+    <meta name="description" content="This is my portfolio site.">
+    <meta name="keyword" content="bolt, bootstrap, portfolio">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0">
   </head>
   <body>
-
+    <header class="header">
+      <div class="inner header-inner text-align">
+        <i class="fas fa-bolt inline-block scale3"></i>
+        <a href="#" class="contact inline-block">contact</a>
+      </div>
+    </header>
+    <main>
+      <div class="title">
+        <div class="inner title-inner">
+          <div class="theme">
+            <div class="theme-title">
+              <h>
+                Bolt theme
+              </h>
+            </div>
+            <div class="theme-text text-align">
+              <h>
+                FREE BOOTSTRAP THEMES
+              </h>
+            </div>
+          </div>
+          <section class="section-what text-align">
+            <img class="what-image inline-block" src="./img/iphone.png">
+            <div class="what-we-can-do inline-block">
+              <div class="what-title">
+                <h>
+                  WHAT WE CAN DO?
+                </h>
+              </div>
+              <div class="what-text">
+                <h>
+                  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                  <br>Lorem Ipsum has been the industry's standard dummy text ever since the
+                  <br>1500s, when an unknown printer took a galley of type and scrambled it to
+                  <br>make a type specimen book.
+                </h>
+              </div>
+            </div>
+          </section>
+          <article class="article-our">
+            <div class="our-title text-align">
+              <h>
+                OUR LATEST WORK
+              </h>
+            </div>
+            <div class="our-image">
+              <a class="image-unit inline-block" href="#">
+                <img src="./img/01.jpg">
+              </a>
+              <a class="image-unit inline-block" href="#">
+                <img src="./img/02.jpg">
+              </a>
+              <a class="image-unit inline-block" href="#">
+                <img src="./img/03.jpg">
+              </a>
+              <a class="image-unit inline-block" href="#">
+                <img src="./img/04.jpg">
+              </a>
+              <a class="image-unit inline-block" href="#">
+                <img src="./img/05.jpg">
+              </a>
+              <a class="image-unit inline-block" href="#">
+                <img src="./img/06.jpg">
+              </a>
+            </div>
+            <div class="our-unit text-align">
+              <div class="our-text inline-block">
+                <h>
+                  Lorem Ipsum is simply dummy text of the printing and typesetting
+                  <br>industry. Lorem Ipsum has been the industry's standard dummy
+                  <br>text ever.
+                </h>
+              </div>
+              <a href="#" class="our-email inline-block">Email Me!</a>
+            </div>
+          </article>
+          <section class="section-skill">
+            <div class="skill-title text-align">
+              <h>
+                OUR SKILL
+              </h>
+            </div>
+            <figure class="skill-image">
+              <div class="circle-image inline-block text-align">
+                <img src="./img/circle_01.png">
+                <div class="skill-text">JavaScript</div>
+              </div>
+              <div class="circle-image inline-block text-align">
+                <img src="./img/circle_02.png">
+                <div class="skill-text">Bootstrap</div>
+              </div>
+              <div class="circle-image inline-block text-align">
+                <img src="./img/circle_03.png">
+                <div class="skill-text">WordPress</div>
+              </div>
+              <div class="circle-image inline-block text-align">
+                <img src="./img/circle_04.png">
+                <div class="skill-text">Photoshop</div>
+              </div>
+            </figure>
+          </section>
+          <nav class="nav-sns text-align">
+            <div class="sns-unit inline-block">
+              <i class="fab fa-facebook-f scale3"></i>
+            </div>
+            <div class="sns-unit inline-block text-align">
+              <i class="fab fa-dribbble scale3"></i>
+            </div>
+            <div class="sns-unit inline-block text-align">
+              <i class="fab fa-twitter scale3"></i>
+            </div>
+            <div class="sns-unit inline-block text-align">
+              <i class="fas fa-envelope scale3"></i>
+            </div>
+          </nav>
+        </div>
+      </div>
+    </main>
+    <footer class="footer">
+      <div class="inner footer-inner text-align">
+        <div class="footer-text">
+          <h>
+            Crafted with♥by BlackTie.co.
+          </h>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
