フォント変更について確認のための現状のコード

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               </h>
             </div>
           </div>
-          <section class="section-what text-align">
+          <section class="inner section-what text-align">
             <img class="what-image inline-block" src="./img/iphone.png">
             <div class="what-we-can-do inline-block">
               <div class="what-title">
@@ -53,7 +53,7 @@
               </div>
             </div>
           </section>
-          <article class="article-our">
+          <article class="inner article-our">
             <div class="our-title text-align">
               <h>
                 OUR LATEST WORK
@@ -90,7 +90,7 @@
               <a href="#" class="our-email inline-block">Email Me!</a>
             </div>
           </article>
-          <section class="section-skill">
+          <section class="inner section-skill">
             <div class="skill-title text-align">
               <h>
                 OUR SKILL
@@ -115,7 +115,7 @@
               </div>
             </figure>
           </section>
-          <nav class="nav-sns text-align">
+          <nav class="inner nav-sns text-align">
             <div class="sns-unit inline-block">
               <i class="fab fa-facebook-f scale3"></i>
             </div>
