BoltのPCページ作成（修正一回目）

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
       <div class="inner header-inner text-align">
         <i class="fas fa-bolt inline-block scale3"></i>
-        <a href="#" class="contact inline-block">contact</a>
+        <a href="#" class="contact inline-block">Contact</a>
       </div>
     </header>
     <main>
@@ -43,7 +43,7 @@
                   WHAT WE CAN DO?
                 </h>
               </div>
-              <div class="what-text">
+              <div class="what-text Lato">
                 <h>
                   Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                   <br>Lorem Ipsum has been the industry's standard dummy text ever since the
@@ -80,7 +80,7 @@
               </a>
             </div>
             <div class="our-unit text-align">
-              <div class="our-text inline-block">
+              <div class="our-text Lato inline-block">
                 <h>
                   Lorem Ipsum is simply dummy text of the printing and typesetting
                   <br>industry. Lorem Ipsum has been the industry's standard dummy
@@ -96,7 +96,7 @@
                 OUR SKILL
               </h>
             </div>
-            <figure class="skill-image">
+            <figure class="skill-image Lato">
               <div class="circle-image inline-block text-align">
                 <img src="./img/circle_01.png">
                 <div class="skill-text">JavaScript</div>
@@ -134,7 +134,7 @@
     </main>
     <footer class="footer">
       <div class="inner footer-inner text-align">
-        <div class="footer-text">
+        <div class="footer-text Lato">
           <h>
             Crafted with♥by BlackTie.co.
           </h>
