BoltのPCページ作成（修正二回目）

--- a/index.html
+++ b/index.html
@@ -15,49 +15,51 @@
   </head>
   <body>
     <header class="header">
-      <div class="inner header-inner text-align">
+      <div class="inner header-inner">
         <i class="fas fa-bolt inline-block scale3"></i>
         <a href="#" class="contact inline-block">Contact</a>
       </div>
     </header>
     <main>
       <div class="title">
-        <div class="inner title-inner">
-          <div class="theme">
-            <div class="theme-title">
-              <h>
-                Bolt theme
-              </h>
-            </div>
-            <div class="theme-text text-align">
-              <h>
-                FREE BOOTSTRAP THEMES
-              </h>
-            </div>
+        <div class="theme inner">
+          <div class="theme-title">
+            <h1>
+              Bolt theme
+            </h1>
           </div>
-          <section class="inner section-what text-align">
+          <div class="theme-text">
+            <h2>
+              FREE BOOTSTRAP THEMES
+            </h2>
+          </div>
+        </div>
+        <section class="section-what">
+          <div class="inner">
             <img class="what-image inline-block" src="./img/iphone.png">
             <div class="what-we-can-do inline-block">
               <div class="what-title">
-                <h>
+                <h1>
                   WHAT WE CAN DO?
-                </h>
+                </h1>
               </div>
               <div class="what-text Lato">
-                <h>
+                <h2>
                   Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                   <br>Lorem Ipsum has been the industry's standard dummy text ever since the
                   <br>1500s, when an unknown printer took a galley of type and scrambled it to
                   <br>make a type specimen book.
-                </h>
+                </h2>
               </div>
             </div>
-          </section>
-          <article class="inner article-our">
-            <div class="our-title text-align">
-              <h>
+          </div>
+        </section>
+        <article class="article-our">
+          <div class="inner">
+            <div class="our-title">
+              <h1>
                 OUR LATEST WORK
-              </h>
+              </h1>
             </div>
             <div class="our-image">
               <a class="image-unit inline-block" href="#">
@@ -79,65 +81,69 @@
                 <img src="./img/06.jpg">
               </a>
             </div>
-            <div class="our-unit text-align">
+            <div class="our-unit">
               <div class="our-text Lato inline-block">
-                <h>
+                <h2>
                   Lorem Ipsum is simply dummy text of the printing and typesetting
                   <br>industry. Lorem Ipsum has been the industry's standard dummy
                   <br>text ever.
-                </h>
+                </h2>
               </div>
               <a href="#" class="our-email inline-block">Email Me!</a>
             </div>
-          </article>
-          <section class="inner section-skill">
-            <div class="skill-title text-align">
-              <h>
+          </div>
+        </article>
+        <section class="section-skill">
+          <div class="inner">
+            <div class="skill-title">
+              <h1>
                 OUR SKILL
-              </h>
+              </h1>
             </div>
             <figure class="skill-image Lato">
-              <div class="circle-image inline-block text-align">
+              <div class="circle-image inline-block">
                 <img src="./img/circle_01.png">
                 <div class="skill-text">JavaScript</div>
               </div>
-              <div class="circle-image inline-block text-align">
+              <div class="circle-image inline-block">
                 <img src="./img/circle_02.png">
                 <div class="skill-text">Bootstrap</div>
               </div>
-              <div class="circle-image inline-block text-align">
+              <div class="circle-image inline-block">
                 <img src="./img/circle_03.png">
                 <div class="skill-text">WordPress</div>
               </div>
-              <div class="circle-image inline-block text-align">
+              <div class="circle-image inline-block">
                 <img src="./img/circle_04.png">
                 <div class="skill-text">Photoshop</div>
               </div>
             </figure>
-          </section>
-          <nav class="inner nav-sns text-align">
-            <div class="sns-unit inline-block">
+          </div>
+        </section>
+        <nav class="nav-sns">
+          <div class="inner">
+            <a class="sns-unit inline-block" href="#">
               <i class="fab fa-facebook-f scale3"></i>
-            </div>
-            <div class="sns-unit inline-block text-align">
+            </a>
+            <a class="sns-unit inline-block" href="#">
               <i class="fab fa-dribbble scale3"></i>
-            </div>
-            <div class="sns-unit inline-block text-align">
+            </a>
+            <a class="sns-unit inline-block" href="#">
               <i class="fab fa-twitter scale3"></i>
-            </div>
-            <div class="sns-unit inline-block text-align">
+            </a>
+            <a class="sns-unit inline-block" href="#">
               <i class="fas fa-envelope scale3"></i>
-            </div>
-          </nav>
-        </div>
+            </a>
+          </div>
+        </nav>
       </div>
     </main>
     <footer class="footer">
-      <div class="inner footer-inner text-align">
+      <div class="inner footer-inner">
         <div class="footer-text Lato">
-          <h>
+          <h1>
             Crafted with♥by BlackTie.co.
-          </h>
+          </h1>
         </div>
       </div>
     </footer>
