文章の改行とul,liタグについての質問のため

--- a/index.html
+++ b/index.html
@@ -26,30 +26,27 @@
           <div class="theme-title">
             <h1>
               Bolt theme
-            </h1>
+            </ｈ>
           </div>
           <div class="theme-text">
-            <h2>
+            <p>
               FREE BOOTSTRAP THEMES
-            </h2>
+            </p>
           </div>
         </div>
         <section class="section-what">
           <div class="inner">
-            <img class="what-image inline-block" src="./img/iphone.png">
-            <div class="what-we-can-do inline-block">
+            <img class="what-image" src="./img/iphone.png">
+            <div class="what-we-can-do">
               <div class="what-title">
-                <h1>
+                <h2>
                   WHAT WE CAN DO?
-                </h1>
+                </h2>
               </div>
               <div class="what-text Lato">
-                <h2>
-                  Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                  <br>Lorem Ipsum has been the industry's standard dummy text ever since the
-                  <br>1500s, when an unknown printer took a galley of type and scrambled it to
-                  <br>make a type specimen book.
-                </h2>
+                <p>
+                  Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has been the industry's standard dummy text ever since the1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                </p>
               </div>
             </div>
           </div>
@@ -57,83 +54,111 @@
         <article class="article-our">
           <div class="inner">
             <div class="our-title">
-              <h1>
+              <h3>
                 OUR LATEST WORK
-              </h1>
+              </h3>
             </div>
-            <div class="our-image">
-              <a class="image-unit inline-block" href="#">
-                <img src="./img/01.jpg">
-              </a>
-              <a class="image-unit inline-block" href="#">
-                <img src="./img/02.jpg">
-              </a>
-              <a class="image-unit inline-block" href="#">
-                <img src="./img/03.jpg">
-              </a>
-              <a class="image-unit inline-block" href="#">
-                <img src="./img/04.jpg">
-              </a>
-              <a class="image-unit inline-block" href="#">
-                <img src="./img/05.jpg">
-              </a>
-              <a class="image-unit inline-block" href="#">
-                <img src="./img/06.jpg">
-              </a>
-            </div>
+            <ul class="our-image">
+              <li>
+                <a class="image-unit" href="#">
+                  <img class="vertical-align-middle" src="./img/01.jpg">
+                </a>
+              </li>
+              <li>
+                <a class="image-unit" href="#">
+                  <img class="vertical-align-middle" src="./img/02.jpg">
+                </a>
+              </li>
+              <li>
+                <a class="image-unit" href="#">
+                  <img class="vertical-align-middle" src="./img/03.jpg">
+                </a>
+              </li>
+              <li>
+                <a class="image-unit" href="#">
+                  <img class="vertical-align-middle" src="./img/04.jpg">
+                </a>
+              </li>
+              <li>
+                <a class="image-unit" href="#">
+                  <img class="vertical-align-middle" src="./img/05.jpg">
+                </a>
+              </li>
+              <li>
+                <a class="image-unit" href="#">
+                  <img class="vertical-align-middle" src="./img/06.jpg">
+                </a>
+              </li>
+            </ul>
             <div class="our-unit">
-              <div class="our-text Lato inline-block">
-                <h2>
-                  Lorem Ipsum is simply dummy text of the printing and typesetting
-                  <br>industry. Lorem Ipsum has been the industry's standard dummy
-                  <br>text ever.
-                </h2>
+              <div class="our-text Lato">
+                <p>
+                  Lorem Ipsum is simply dummy text of the printing and typesettingindustry. Lorem Ipsum has been the industry's standard dummytext ever.
+                </p>
               </div>
-              <a href="#" class="our-email inline-block">Email Me!</a>
+              <a href="#" class="our-email">Email Me!</a>
             </div>
           </div>
         </article>
         <section class="section-skill">
           <div class="inner">
             <div class="skill-title">
-              <h1>
+              <h4>
                 OUR SKILL
-              </h1>
+              </h4>
             </div>
-            <figure class="skill-image Lato">
-              <div class="circle-image inline-block">
-                <img src="./img/circle_01.png">
-                <div class="skill-text">JavaScript</div>
-              </div>
-              <div class="circle-image inline-block">
-                <img src="./img/circle_02.png">
-                <div class="skill-text">Bootstrap</div>
-              </div>
-              <div class="circle-image inline-block">
-                <img src="./img/circle_03.png">
-                <div class="skill-text">WordPress</div>
-              </div>
-              <div class="circle-image inline-block">
-                <img src="./img/circle_04.png">
-                <div class="skill-text">Photoshop</div>
-              </div>
-            </figure>
+            <ul class="skill-image Lato">
+              <li>
+                <figure class="circle-image">
+                  <img src="./img/circle_01.png">
+                  <div class="skill-text">JavaScript</div>
+                </figure>
+              </li>
+              <li>
+                <figure class="circle-image">
+                  <img src="./img/circle_02.png">
+                  <div class="skill-text">Bootstrap</div>
+                </figure>
+              </li>
+              <li>
+                <figure class="circle-image">
+                  <img src="./img/circle_03.png">
+                  <div class="skill-text">WordPress</div>
+                </figure>
+              </li>
+              <li>
+                <figure class="circle-image">
+                  <img src="./img/circle_04.png">
+                  <div class="skill-text">Photoshop</div>
+                </figure>
+              </li>
+            </ul>
           </div>
         </section>
         <nav class="nav-sns">
           <div class="inner">
-            <a class="sns-unit inline-block" href="#">
-              <i class="fab fa-facebook-f scale3"></i>
-            </a>
-            <a class="sns-unit inline-block" href="#">
-              <i class="fab fa-dribbble scale3"></i>
-            </a>
-            <a class="sns-unit inline-block" href="#">
-              <i class="fab fa-twitter scale3"></i>
-            </a>
-            <a class="sns-unit inline-block" href="#">
-              <i class="fas fa-envelope scale3"></i>
-            </a>
+            <ul class="sns-title">
+              <li>
+                <a class="sns-unit inline-block" href="#">
+                  <i class="fab fa-facebook-f scale3"></i>
+                </a>
+              </li>
+              <li>
+                <a class="sns-unit inline-block" href="#">
+                  <i class="fab fa-dribbble scale3"></i>
+                </a>
+              </li>
+              <li>
+                <a class="sns-unit inline-block" href="#">
+                  <i class="fab fa-twitter scale3"></i>
+                </a>
+              </li>
+              <li>
+                <a class="sns-unit inline-block" href="#">
+                  <i class="fas fa-envelope scale3"></i>
+                </a>
+              </li>
+            </ul>
           </div>
         </nav>
       </div>
@@ -141,9 +166,9 @@
     <footer class="footer">
       <div class="inner footer-inner">
         <div class="footer-text Lato">
-          <h1>
+          <p>
             Crafted with♥by BlackTie.co.
-          </h1>
+          </p>
         </div>
       </div>
     </footer>
