BoltのPCページ作成（修正三回目）

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <div class="inner header-inner">
         <i class="fas fa-bolt inline-block scale3"></i>
         <a href="#" class="contact inline-block">Contact</a>
+        <i class="fas fa-bars inline-block"></i>
       </div>
     </header>
     <main>
@@ -45,7 +46,7 @@
               </div>
               <div class="what-text Lato">
                 <p>
-                  Lorem Ipsum is simply dummy text of the printing and typesetting industry.Lorem Ipsum has been the industry's standard dummy text ever since the1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                 </p>
               </div>
             </div>
@@ -59,33 +60,33 @@
               </h3>
             </div>
             <ul class="our-image">
-              <li>
-                <a class="image-unit" href="#">
+              <li class="image-unit">
+                <a href="#">
                   <img class="vertical-align-middle" src="./img/01.jpg">
                 </a>
               </li>
-              <li>
-                <a class="image-unit" href="#">
+              <li class="image-unit">
+                <a href="#">
                   <img class="vertical-align-middle" src="./img/02.jpg">
                 </a>
               </li>
-              <li>
-                <a class="image-unit" href="#">
+              <li class="image-unit">
+                <a href="#">
                   <img class="vertical-align-middle" src="./img/03.jpg">
                 </a>
               </li>
-              <li>
-                <a class="image-unit" href="#">
+              <li class="image-unit">
+                <a href="#">
                   <img class="vertical-align-middle" src="./img/04.jpg">
                 </a>
               </li>
-              <li>
-                <a class="image-unit" href="#">
+              <li class="image-unit">
+                <a href="#">
                   <img class="vertical-align-middle" src="./img/05.jpg">
                 </a>
               </li>
-              <li>
-                <a class="image-unit" href="#">
+              <li class="image-unit">
+                <a href="#">
                   <img class="vertical-align-middle" src="./img/06.jpg">
                 </a>
               </li>
@@ -93,7 +94,7 @@
             <div class="our-unit">
               <div class="our-text Lato">
                 <p>
-                  Lorem Ipsum is simply dummy text of the printing and typesettingindustry. Lorem Ipsum has been the industry's standard dummytext ever.
+                  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.
                 </p>
               </div>
               <a href="#" class="our-email">Email Me!</a>
@@ -108,26 +109,26 @@
               </h4>
             </div>
             <ul class="skill-image Lato">
-              <li>
-                <figure class="circle-image">
+              <li class="circle-image">
+                <figure>
                   <img src="./img/circle_01.png">
                   <div class="skill-text">JavaScript</div>
                 </figure>
               </li>
-              <li>
-                <figure class="circle-image">
+              <li class="circle-image">
+                <figure>
                   <img src="./img/circle_02.png">
                   <div class="skill-text">Bootstrap</div>
                 </figure>
               </li>
-              <li>
-                <figure class="circle-image">
+              <li class="circle-image">
+                <figure>
                   <img src="./img/circle_03.png">
                   <div class="skill-text">WordPress</div>
                 </figure>
               </li>
-              <li>
-                <figure class="circle-image">
+              <li class="circle-image">
+                <figure>
                   <img src="./img/circle_04.png">
                   <div class="skill-text">Photoshop</div>
                 </figure>
@@ -138,23 +139,22 @@
         <nav class="nav-sns">
           <div class="inner">
             <ul class="sns-title">
-              <li>
-                <a class="sns-unit inline-block" href="#">
+              <li class="sns-unit">
+                <a class="sns-color" href="#">
                   <i class="fab fa-facebook-f scale3"></i>
                 </a>
-              </li>
-              <li>
-                <a class="sns-unit inline-block" href="#">
+              <li class="sns-unit">
+                <a class="sns-color" href="#">
                   <i class="fab fa-dribbble scale3"></i>
                 </a>
               </li>
-              <li>
-                <a class="sns-unit inline-block" href="#">
+              <li class="sns-unit">
+                <a class="sns-color" href="#">
                   <i class="fab fa-twitter scale3"></i>
                 </a>
               </li>
-              <li>
-                <a class="sns-unit inline-block" href="#">
+              <li class="sns-unit">
+                <a class="sns-color" href="#">
                   <i class="fas fa-envelope scale3"></i>
                 </a>
               </li>
