BoltのPCページ（修正四回目）＆レスポンシブの作成

--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
   <body>
     <header class="header">
       <div class="inner header-inner">
-        <i class="fas fa-bolt inline-block scale3"></i>
-        <a href="#" class="contact inline-block">Contact</a>
-        <i class="fas fa-bars inline-block"></i>
+        <i class="fas fa-bolt scale3"></i>
+        <a href="#" class="contact">Contact</a>
+        <i class="fas fa-bars"></i>
       </div>
     </header>
     <main>
       <div class="title">
         <div class="theme inner">
-          <div class="theme-title">
+          <div class="theme-title raleway">
             <h1>
               Bolt theme
-            </ｈ>
+            </h1>
           </div>
           <div class="theme-text">
             <p>
@@ -39,12 +39,12 @@
           <div class="inner">
             <img class="what-image" src="./img/iphone.png">
             <div class="what-we-can-do">
-              <div class="what-title">
+              <div class="what-title raleway">
                 <h2>
                   WHAT WE CAN DO?
                 </h2>
               </div>
-              <div class="what-text Lato">
+              <div class="what-text">
                 <p>
                   Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
                 </p>
@@ -54,10 +54,10 @@
         </section>
         <article class="article-our">
           <div class="inner">
-            <div class="our-title">
-              <h3>
+            <div class="our-title raleway">
+              <h2>
                 OUR LATEST WORK
-              </h3>
+              </h2>
             </div>
             <ul class="our-image">
               <li class="image-unit">
@@ -92,7 +92,7 @@
               </li>
             </ul>
             <div class="our-unit">
-              <div class="our-text Lato">
+              <div class="our-text">
                 <p>
                   Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.
                 </p>
@@ -103,34 +103,34 @@
         </article>
         <section class="section-skill">
           <div class="inner">
-            <div class="skill-title">
-              <h4>
-                OUR SKILL
-              </h4>
+            <div class="skill-title raleway">
+              <h2>
+                OUR SKILLS
+              </h2>
             </div>
             <ul class="skill-image Lato">
               <li class="circle-image">
                 <figure>
                   <img src="./img/circle_01.png">
-                  <div class="skill-text">JavaScript</div>
+                  <figcaption class="skill-text">JavaScript</figcaption>
                 </figure>
               </li>
               <li class="circle-image">
                 <figure>
                   <img src="./img/circle_02.png">
-                  <div class="skill-text">Bootstrap</div>
+                  <figcaption class="skill-text">Bootstrap</figcaption>
                 </figure>
               </li>
               <li class="circle-image">
                 <figure>
                   <img src="./img/circle_03.png">
-                  <div class="skill-text">WordPress</div>
+                  <figcaption class="skill-text">WordPress</figcaption>
                 </figure>
               </li>
               <li class="circle-image">
                 <figure>
                   <img src="./img/circle_04.png">
-                  <div class="skill-text">Photoshop</div>
+                  <figcaption class="skill-text">Photoshop</figcaption>
                 </figure>
               </li>
             </ul>
@@ -165,7 +165,7 @@
     </main>
     <footer class="footer">
       <div class="inner footer-inner">
-        <div class="footer-text Lato">
+        <div class="footer-text">
           <p>
             Crafted with♥by BlackTie.co.
           </p>
