BoltのPCページ（修正五回目）とレスポンシブのレビュー依頼

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
       <div class="inner header-inner">
         <i class="fas fa-bolt scale3"></i>
-        <a href="#" class="contact">Contact</a>
+        <a class="contact" href="#">Contact</a>
         <i class="fas fa-bars"></i>
       </div>
     </header>
