Boltのレスポンシブのレビュー(修正2回目)依頼

--- a/index.html
+++ b/index.html
@@ -24,11 +24,9 @@
     <main>
       <div class="title">
         <div class="theme inner">
-          <div class="theme-title raleway">
-            <h1>
-              Bolt theme
-            </h1>
-          </div>
+          <h1 class="theme-title raleway">
+            Bolt theme
+          </h1>
           <div class="theme-text">
             <p>
               FREE BOOTSTRAP THEMES
@@ -39,27 +37,21 @@
           <div class="inner">
             <img class="what-image" src="./img/iphone.png">
             <div class="what-we-can-do">
-              <div class="what-title raleway">
-                <h2>
-                  WHAT WE CAN DO?
-                </h2>
-              </div>
-              <div class="what-text">
-                <p>
-                  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
-                </p>
-              </div>
+              <h2 class="what-title raleway">
+                WHAT WE CAN DO?
+              </h2>
+              <p class="what-text">
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+              </p>
             </div>
           </div>
         </section>
         <article class="article-our">
           <div class="inner">
-            <div class="our-title raleway">
-              <h2>
-                OUR LATEST WORK
-              </h2>
-            </div>
-            <ul class="our-image">
+            <h2 class="our-title raleway">
+              OUR LATEST WORK
+            </h2>
+            <ul class="our-image clearfix">
               <li class="image-unit">
                 <a href="#">
                   <img class="vertical-align-middle" src="./img/01.jpg">
@@ -92,22 +84,18 @@
               </li>
             </ul>
             <div class="our-unit">
-              <div class="our-text">
-                <p>
-                  Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.
-                </p>
-              </div>
+              <p class="our-text">
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever.
+              </p>
               <a href="#" class="our-email">Email Me!</a>
             </div>
           </div>
         </article>
         <section class="section-skill">
           <div class="inner">
-            <div class="skill-title raleway">
-              <h2>
-                OUR SKILLS
-              </h2>
-            </div>
+            <h2 class="skill-title raleway">
+              OUR SKILLS
+            </h2>
             <ul class="skill-image Lato">
               <li class="circle-image">
                 <figure>
@@ -165,11 +153,9 @@
     </main>
     <footer class="footer">
       <div class="inner footer-inner">
-        <div class="footer-text">
-          <p>
-            Crafted with♥by BlackTie.co.
-          </p>
-        </div>
+        <p class="footer-text">
+          Crafted with♥by BlackTie.co.
+        </p>
       </div>
     </footer>
   </body>
