Boltのレスポンシブのレビュー(修正3回目)依頼

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
   <body>
     <header class="header">
       <div class="inner header-inner">
-        <i class="fas fa-bolt scale3"></i>
+        <i class="fas fa-bolt"></i>
         <a class="contact" href="#">Contact</a>
-        <i class="fas fa-bars"></i>
+        <div class="hamburger-menu">
+          <label for="menu-btn-check" class="menu-btn"><span></span></label>
+        </div>
       </div>
     </header>
     <main>
